log
Thu 16 May 2024 12:59:53 AM UTC: 
 tests:  0|5
total_score: 0/70
62a6a69
Thu 16 May 2024 01:06:09 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
1117710
Thu 16 May 2024 01:17:52 AM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:18: error: ‘nodo’ undeclared (first use in this function)
   67 |   pushBack(list, nodo);
      |                  ^~~~
sudoku.c:67:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
29cde26
Thu 16 May 2024 01:18:05 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f1abcf7
Thu 16 May 2024 01:23:52 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
4af51b7
Thu 16 May 2024 01:24:06 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
1d239e1
Thu 16 May 2024 01:24:34 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
1aadebc
Thu 16 May 2024 01:25:37 AM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3d0eb8c
Thu 16 May 2024 01:26:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ab748fc
Thu 16 May 2024 01:26:47 AM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 5/70
ba0fbd2
Thu 16 May 2024 01:27:54 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
6469f03
Thu 16 May 2024 01:28:35 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
a08fec1
